--- a/cricApi2/src/app/all-matches/all-matches.component.html
+++ b/cricApi2/src/app/all-matches/all-matches.component.html
@@ -1,8 +1,17 @@
+<app-navbar></app-navbar>
 <div class="container">
   <div class="row">
     <div *ngFor="let match of matches">
         <div class="well">
-          <p>{{match.srs}}</p>
+          <h1>{{match.$.srs}} {{match.$.mnum}} </h1>
+          <p>{{match.$.mchDesc}}<span *ngIf="match.$.grnd">: {{match.$.grnd}},</span> <span *ngIf="match.$.vcity"> {{match.$.vcity}},</span> <span *ngIf="match.$.vcountry">{{match.$.vcountry}}</span></p>
+          <br><br>
+          <div *ngIf="match.mscr">
+            <h3>Score:</h3>
+            <p>{{match.mscr[0].btTm[0].$.sName}}: {{match.mscr[0].btTm[0].Inngs[0].$.r}}/{{match.mscr[0].btTm[0].Inngs[0].$.wkts}} in {{match.mscr[0].btTm[0].Inngs[0].$.ovrs}} Overs</p>
+          </div>
+          <p>{{match.state[0].$.mchState}}: {{match.state[0].$.status}}</p>
+          <p *ngIf="match.manofthematch">Man of The Match: {{match.manofthematch[0].mom[0].$.Name}}
         </div>
     </div>
   </div>
