--- a/cricApi2/src/app/navbar/navbar.component.html
+++ b/cricApi2/src/app/navbar/navbar.component.html
@@ -1,18 +1,14 @@
-<div class="navbar navbar-default navbar-fixed-top">
+<div class="navbar navbar-default navbar">
   <div class="container">
     <div class="navbar-header">
       <a href="/" class="navbar-brand">Bootswatch</a>
-      <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
     </div>
     <div class="navbar-collapse collapse" id="navbar-main">
       <ul class="nav navbar-nav">
         <li>
           <a>Home</a>
         </li>
+      </ul>
     </div>
   </div>
 </div>
