--- a/cricapi3/src/app/navbar/navbar.component.html
+++ b/cricapi3/src/app/navbar/navbar.component.html
@@ -3,10 +3,13 @@
       <div class="navbar-header">
         <a href="/" class="navbar-brand">CricAPI3</a>
       </div>
-      <div class="navbar-collapse collapse" id="navbar-main">
+      <div class="navbar" id="navbar-main">
         <ul class="nav navbar-nav">
           <li>
             <a href="/">Home</a>
+          </li>
+          <li>
+              <a href="/current">Ongoing</a>
           </li>
         </ul>
       </div>
